...

    return Scaffold(
      appBar: AppBar(
        title: const Text(Textos.gestionarExamenes),
        actions: <Widget>[
          IconButton(
            key: const Key('exams_refresh_button'),
            onPressed: _recargar,
            icon: const Icon(Icons.refresh),
            tooltip: 'Actualizar',
          ),
        ],
      ),
...
